Revision history for {{$dist->name}}

{{$NEXT}}
          - no longer setting dynamic_config => 1 -- it is generally the CPAN
            client that interrogates the user, not Makefile.PL/Build.PL

0.004     2013-07-29 17:29:20 PDT-0700 (Karen Etheridge)
          - now setting dynamic_config => 1 in metadata, as directed in
            CPAN::Meta::Spec

0.003     2013-07-18 10:35:20 PDT-0700 (Karen Etheridge)
          - a use of $` has been replaced with ${^PREMATCH}, which requires perl
            5.9.5 (RT#86989)

0.002     2013-07-16 22:31:11 PDT-0700 (Karen Etheridge)
          - name, description, and always_recommend options are now prefaced
            with dashes, just like -phase and -relationship (to avoid naming
            conflicts)

0.001     2013-07-16 21:24:19 PDT-0700 (Karen Etheridge)
          - Initial release.
